# Markdown-file-conversion-tool

./: .dockerignore  .gitignore  Dockerfile  Markdown Converter.lnk  README.md  deploy.sh  docker-compose.yml  markdown_converter_project.py  pyproject.toml  requirements.txt  test_input.txt
docker/: nginx.conf  supervisord.conf
src/markdown_converter/: cli.py  config.py  converter_registry.py  gui.py  gui_multilang.py  service.py  utils.py  web_api.py
src/markdown_converter/converters/: base.py  docx_converter.py  pdf_converter.py  pptx_converter.py  text_converter.py  xlsx_converter.py
tests/: test_utils.py
web/: index.html  package-lock.json  package.json  vite.config.ts
web/public/: manifest.json  robots.txt  sitemap.xml
web/src/: App.tsx  index.css  types.ts
web/src/components/: ActionPanel.tsx  BackendStatus.tsx  ConvertSettings.tsx  DashboardStats.tsx  EmptyState.tsx  FAQAccordion.tsx  FeedbackModal.tsx  FileDropzone.tsx  FileList.tsx  Header.tsx  HelpCenter.tsx  HelpChecklist.tsx  HelpSearch.tsx  LanguageSwitch.tsx  LogPanel.tsx  MarkdownPreview.tsx  MobileUploadTip.tsx  Onboarding.tsx  ProgressBar.tsx  ResultPanel.tsx  SeoContent.tsx  ShortcutGuide.tsx  Skeleton.tsx  StatusBadge.tsx  Toast.tsx  ToggleSwitch.tsx
web/src/lib/: api.ts  device.ts  file.ts  history.ts  i18n.ts  settings-store.ts  ui.ts
web/src/pages/: Landing.tsx
